--- a/css/main.css
+++ b/css/main.css
@@ -497,11 +497,11 @@ address {
     align-items: center;
     flex-flow: row wrap;
     background-color: #527158;
-    padding-bottom: 2.5em;
+    padding: 40px 0 40px 20px;
 }
 
 .faq .content-wrapper h2 {
-    width: 80%;
+    width: 90%;
     font-size: 1.875em;
     margin-left: 0;
 }
@@ -771,11 +771,12 @@ address {
 
 /*****FOOTER*****/
   .footer-content {
-    width: 60%;
-    justify-content: space-between;
+    width: 80%;
+    justify-content: space-around;
     display: flex;
     align-items: center;
-    margin:100px 0;
+    padding-bottom: 10%;
+    padding-right:10%;
   }
 
   footer .content-wrapper {
@@ -791,8 +792,8 @@ address {
   }
 
   .social h4 {
-    font-size:1.5em;
-    margin: 1.875em;
+    font-size: 1.5em;
+    padding-top: .75em;
   }
 
   .contact p {
@@ -816,6 +817,7 @@ address {
     align-items: center;
     margin: auto;
     padding-top:1.25em;
+    margin: 0 60px 60px 60px;
   }
 
   .mission .content-wrapper h2 {
@@ -829,6 +831,29 @@ address {
     width:45%;
   }
 
+/*****Tablet Map Here*****/
+.map {
+    width: 100%;
+    height: 45%;
+}
+
+.map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 45%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/*****Tablet Contact Section Here*****/
   .contact-section .content-wrapper h2 {
     width: 60%;
     font-size: 2.25em;
@@ -838,13 +863,41 @@ address {
   .contact-content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 45px 70px 90px 40px;
-    width:70%;
-}
+    align-items: flex-start;
+    width:80%;
+    padding-left:2.8125em;
+  }
 
-  .contact-content h3 {
-    margin:1em;
+  .contact-content .contact-one h3 {
+    margin-left:.625em;
+  }
+
+  .contact-content .contact-two {
+    width: 40%;
+  }
+
+  .contact-content .contact-two h3 {
+    margin-left:0;
+  }
+
+  .contact-section .content-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-flow: row wrap;
+  }
+
+  .contact-content address {
+    text-align: left;
+    padding-left:0;
+  }
+
+  .contact-content address p {
+    margin-left: 1em;
+  }
+
+  .contact-two p {
+    margin:20px 0;
   }
 
 /*****FAQ PAGE*****/
@@ -1008,6 +1061,7 @@ address {
   .social {
     text-align: center;
     width: 30%;
+    padding-bottom:1em;
   }
 
   .social h4 {
@@ -1043,6 +1097,28 @@ address {
     font-size: 1.125em;
   }
 
+/*****Desktop Map Area here*****/
+.map {
+    width: 100%;
+    height: 38%;
+}
+
+.map figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 38%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 /*****Contact Info here*****/
   .contact-section .content-wrapper h2 {
     width: 80%;
@@ -1068,7 +1144,13 @@ address {
     width: 50%;
   }
 
-  .contact-content h3 {
+  .contact-content .contact-one h3 {
+    margin-left: 1em;
+    font-size:1.875em;
+  }
+
+  .contact-content .contact-two h3 {
+    padding: 15px 20px 0;
     font-size: 1.875em;
   }
 
@@ -1078,7 +1160,7 @@ address {
   }
 
   .contact-content p {
-    margin-left: 2.5em;
+    margin-left: 1em;
     font-size: 1.125em;
   }
 
