Test Your Site Final Modification

--- a/css/main.css
+++ b/css/main.css
@@ -413,10 +413,11 @@ address {
 
 /*****Copyright Here*****/
 .copyright p {
-    margin: 40px 80px 10px 80px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 3em;
+  padding-bottom: 0;
 }
 
 /*****ABOUT PAGE*****/
@@ -444,7 +445,6 @@ address {
 /*****Map Figure here*****/
 .map {
     width: 100%;
-    height: 450px;
 }
 
 .map figure {
@@ -530,6 +530,12 @@ address {
 .faq-content {
     width: 83%;
     margin: 0 50px 0 20px;
+}
+
+footer .contact p {
+  width:40%;
+  display: inline-flex;
+  justify-content: center;
 }
 
 /* ==========================================================================
@@ -895,7 +901,6 @@ address {
 /*****Tablet Map Here*****/
 .map {
     width: 100%;
-    height: 45%;
 }
 
 .map figure {
@@ -1202,7 +1207,6 @@ address {
 /*****Desktop Map Area here*****/
 .map {
     width: 100%;
-    height: 38%;
 }
 
 .map figure {
@@ -1362,4 +1366,3 @@ address {
   h3 {
     page-break-after: avoid;
   }
-}
